# graphlens

./: README.md  pyproject.toml
examples/: main.py
graphlens/: __init__.py  graph_parser.py  inspector.py  partition_simulator.py
lensrt/: api.py  runtime_analyser.py
tinygraphparser/: graph_parser.py  partition_simulator.py
