[project]
name = "graphlens"
version = "0.1.0"
description = "Static TFLite / LiteRT-LM graph analyzer for QNN partition blockers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tflite>=2.18.0",
    "flatbuffers>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphlens"]
